--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
         <section>
             <div class="container">
                 <div class="icon">
-                    <div class="logo"> <ion-icon name="arrow-back-outline" style="font-size: 40px;"></ion-icon> </div>
-                    <div class="logo"> <ion-icon name="arrow-forward-outline" style="font-size: 40px;"></ion-icon> </div>
+                    <div class="logo"> <ion-icon name="arrow-back-outline" style="font-size: 40px; color: white;"></ion-icon> </div>
+                    <div class="logo"> <ion-icon name="arrow-forward-outline" style="font-size: 40px; color: white; "></ion-icon> </div>
                 </div>
             </div>
         </section>
